CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.9

	- Documentation updates (STR #2904)
	- The scheduler required Kerberos authentication for
	  all operations on remote Kerberized printers instead
	  of just for the operations that needed it.
	- The socket backend could wait indefinitely for back-
	  channel data with some devices.
	- PJL panel messages were not reset correctly on older
	  printers (STR #2909)
	- cupsfilter used the wrong default path (STR #2908)
	- Fixed address matching for "BrowseAddress @IF(name)"
	  (STR #2910)
	- Fixed compiles on AIX.
	- Firefox 3 did not work with the CUPS web interface in SSL
	  mode (STR #2892)
	- Custom options with multiple parameters were not emitted
	  correctly.
	- Refined the cupstestppd utility.
	- ppdEmit*() did not support custom JCL options (STR #2889)
	- The cupstestppd utility incorrectly reported missing
	  "en" base translations (STR #2887)


CHANGES IN CUPS V1.3.8

	- Documentation updates (STR #2785, STR #2861, STR #2862)
	- The scheduler did not add the ending job sheet when the
	  job was released.
	- The IPP backend did not relay marker-* attributes.
	- The CUPS GNOME/KDE menu item was not localized for
	  Chinese (STR #2880)
	- The CUPS GNOME/KDE menu item was not localized for
	  Japanese (STR #2876)
	- The cupstestppd utility reported mixed line endings for
	  Mac OS and Windows PPD files (STR #2874)
	- The pdftops filter did not print landscape orientation PDF
	  pages correctly on all printers (STR #2850)
	- The scheduler did not handle expiring of implicit classes
	  or their members properly, leading to a configuration where
	  one of the members would have a short name (STR #2766)
	- The scheduler and cupstestppd utilities did not support
	  cupsFilter and cupsPreFilter programs with spaces in their
	  names (STR #2866)
	- Removed unused variables and assignments found by the
	  LLVM "clang" tool.
	- Added NULL checks recommended by the LLVM "clang" tool.